--- a/Compiler/ModelicaCompiler/build.xml
+++ b/Compiler/ModelicaCompiler/build.xml
@@ -33,8 +33,8 @@
     <property name="jars" value="ModelicaCompiler,util,separateProcess"/>
     <property name="ModelicaCompiler.jar.packages" value="${base_package}"/>
     <property name="ModelicaCompiler.jar.include_resources" value="true"/>
-    <property name="util.jar.packages" value="org.jmodelica.util,org.jmodelica.api"/>
-    <property name="separateProcess.jar.packages" value="org.jmodelica.util,org.jmodelica.api,org.jmodelica.separateProcess"/>
+    <property name="util.jar.packages" value="org.jmodelica.util,org.jmodelica.common,org.jmodelica.api"/>
+    <property name="separateProcess.jar.packages" value="org.jmodelica.util,org.jmodelica.common,org.jmodelica.api,org.jmodelica.separateProcess"/>
     
     <property name="javadoc.path" value="doc/javadoc"/>
     <property name="javadoc.packages" value="org.jmodelica.*"/>
