--- a/trunk/Compiler/ModelicaCompilerCasADi/build.xml
+++ b/trunk/Compiler/ModelicaCompilerCasADi/build.xml
@@ -32,7 +32,7 @@
 	
 	<property name="jars" value="ModelicaCompiler,util"/>
     <property name="ModelicaCompiler.jar.packages" value="${base_package}"/>
-    <property name="util.jar.packages" value="org.jmodelica.util,org.jmodelica.api,ifcasadi"/>
+    <property name="util.jar.packages" value="org.jmodelica.util,org.jmodelica.common,org.jmodelica.api,ifcasadi"/>
 	
 	<import file="../build-base.xml"/>
 </project>
