--- a/Compiler/OptimicaCompilerCasADi/build.xml
+++ b/Compiler/OptimicaCompilerCasADi/build.xml
@@ -32,7 +32,7 @@
 	
     <property name="jars" value="OptimicaCompiler,util"/>
     <property name="OptimicaCompiler.jar.packages" value="${base_package}"/>
-    <property name="util.jar.packages" value="org.jmodelica.util,org.jmodelica.common,org.jmodelica.api,casadi"/>
+    <property name="util.jar.packages" value="org.jmodelica.util,org.jmodelica.api,casadi"/>
 	
     <import file="../build-base.xml"/>
 </project>
